Alignment fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,14 +7,6 @@
 	border: 3px solid black;
 }
 
-/*.titleimg {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 400;
-  height: 200;
-}*/
-
 body{
 	background: linear-gradient(360deg, #28cffc, #0c0f6e) no-repeat center center fixed;
 	background-repeat: no-repeat;
@@ -30,7 +22,6 @@ body{
     -o-box-shadow: 0 5px 15px rgba(0,0,0,0);
     box-shadow: 0 5px 15px rgba(0,0,0,0);
 }
-
 
 .card-title p {
     color: #43a5de;
